--- a/style.css
+++ b/style.css
@@ -1,173 +1,280 @@
-*,
-::after,
-::before{
+*{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
 }
-
 body{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    min-height: 100vh;
-    flex-wrap: wrap;
-    background-color: #c2caca;
-}
-
-.container{
-    max-width: 650px;
-    position: relative;
-    background: rgba(255, 255, 25, .2);
-    overflow: hidden;
-    opacity: 1;
-    border-radius: 10px;
-    box-shadow: 0px 0px 15px 3px rgba(0, 0,0, 0.5);
-    border-top: 6px solid rgba(117, 9, 112, 0.5);
-    border-right: 6px solid rgba(117, 9, 112, 0.5);
-    border-bottom: 6px solid rgba(117, 9, 112, 0.5);
-    border-left: 6px solid rgba(117, 9, 112, 0.5);
-    font-family: sans-serif;
-    padding: 50px;
-    display: flex;
-    
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-
-span {
-    position: relative;
-    border-radius: 100vmax;
-  }
-
-  .top {
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 5px;
-    background: linear-gradient(
-      90deg,
-      transparent 50%,
-      rgba(255, 49, 49, 0.5),
-      rgb(255, 49, 49)
-    );
-  }
-  
-  .bottom {
-    right: 0;
-    bottom: 0;
-    height: 5px;
-    background: linear-gradient(
-      90deg,
-      rgb(57, 255, 20),
-      rgba(57, 255, 20, 0.5),
-      transparent 50%
-    );
-  }
-  
-  .right {
-    top: 0;
-    right: 0;
-    width: 5px;
-    height: 0;
-    background: linear-gradient(
-      180deg,
-      transparent 30%,
-      rgba(0, 255, 255, 0.5),
-      rgb(0, 255, 255)
-    );
-  }
-  
-  .left {
-    left: 0;
-    bottom: 0;
-    width: 5px;
-    height: 0;
-    background: linear-gradient(
-      180deg,
-      rgb(255, 255, 113),
-      rgba(255, 255, 113, 0.5),
-      transparent 70%
-    );
-  }
-  
-  
-  
- 
-.title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap-reverse;
-    gap: 10px;
-}
-
-.Temperature-icon{
-    font-size: 45px;
-    color:#000000;
-}
-
-h1{
-    color: #044630;
-    letter-spacing: 1.2px;
-    font-size: 50px;
-} 
-
-#celsius, #fahrenheit, #kelvin{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 25px;
-}
-
-input{
-    flex: 5px;
-    height: 60px;
-    font-size: 20px;
-    font-weight: 600;
-    text-align: center;
-    border: none;
-    outline: none;
-    border-radius: 8px 0 0 8px;
-    padding: 0 10px;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button{
-    -webkit-appearance: none;
-}
-
-
-.icon{
-    flex: 1;
-    height: 60px;
-    line-height: 60px;
-    padding: 0 5px;
-    text-align: center;
-    font-size: 30px;
-    background-color: #4d5964;
-    color: #fff;
-    border-radius: 0 8px 8px 0;
-}
-
-.button{
-    margin-top: 25px;
-    text-align: center;
-}
-
-.button button{
-    border: none;
-    outline: none;
-    padding: 10px 30px;
-    font-size: 20px;
-    font-weight: 600;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.button button:hover{
     background: #000;
     color: #fff;
-    transition-delay: 0.2s;
+}
+.header{
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/header-image.png);
+    background-size: cover;
+    background-position: center;
+    padding: 10px 8%;
+    position: relative;
+}
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.logo{
+    cursor: pointer;
+    width: 150px;
+}
+nav button{
+    border: 0;
+    outline: 0;
+    background: #db0001;
+    color: #fff;
+    padding: 7px 20px;
+    font-size: 12px;
+    border-radius: 4px;
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+.language-btn{
+    display: inline-flex;
+    background: transparent;
+    align-items: center;
+    border: 1px solid #fff;
+    padding: 7px 10px;
+}
+
+.language-btn img{
+    margin-left: 10px;
+    width: 10px;
+}
+
+.header-content{
+    position: absolute;
+    text-align: center;
+    margin-top: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header-content h1{
+    font-size: 60px;
+    max-width: 650px;
+    line-height: 70px;
+    font-weight: 600;
+}
+
+.header-content h3{
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
+.email-signup{
+    background: #fff;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+    overflow: hidden;
+}
+
+.email-signup input{
+    flex: 1;
+    border: 0;
+    outline: 0;
+    margin-left: 20px;
+}
+.email-signup button{
+    background: #db0001;
+    border: 0;
+    outline: 0;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 15px 30px;
+}
+.features{
+    padding: 50px 12%;
+    font-size: 22px;
+}
+.row{
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 50px 0;
+}
+.text-col{
+    flex-basis: 50%;
+    margin-bottom: 20px;
+}
+.img-col{
+    flex-basis: 50%;
+    margin-bottom: 20px;
+}
+.img-col img{
+    display: block;
+    width: 90%;
+    margin: auto;
+}
+.features h2{
+    font-size: 50px;
+    margin-bottom: 20px;
+    font-weight: 600;
+}
+.faq{
+    padding: 10px 12%;
+    text-align: center;
+    font-size: 18px;
+}
+.faq h2{
+    font-weight: 500;
+    font-size: 40px;
+}
+.accordion{
+    margin: 60px auto;
+    width: 100%;
+    max-width: 750px;
+}
+.accordion li{
+    list-style: none;
+    width: 100%;
+    padding: 5px;
+}
+.accordion li label{
+    display: flex;
+    font-weight:500;
+    align-items: center;
+    padding: 20px;
+    font-size: 18px;
+    background: #303030;
+    margin-bottom: 2px;
+    cursor: pointer;
+    position: relative;
+}
+label::after{
+    content: '+';
+    position: absolute;
+    font-size: 30px;
+    right: 20px;
+    transition: transform 0.5s;
+}
+input[type="radio"]{
+    display: none;
+}
+.accordion .content{
+    background: #303030;
+    text-align: left;
+    padding: 0 20px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+.accordion input[type="radio"]:checked + label + .content{
+ max-height: 600px;
+ padding: 30px 20px;
+}
+.accordion input[type="radio"]:checked + label::after{
+    transform: rotate(135deg);
+}
+.faq .email-signup{
+    max-width: 600px;
+    margin: 20px auto 60px;
+}
+.faq small{
+    font-size: 13px;
+}
+.footer{
+    padding: 50px 15% 10px;
+    border-top: 6px solid #333;
+    color: #777;
+}
+.footer h2{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom:30px ;
+}
+.footer .col{
+    flex-basis: 25%;
+    flex-grow: 1;
+    margin-bottom: 20px;
+}
+.footer .col a{
+    display: block;
+    text-decoration: none;
+    color: #777;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+.footer .row{
+    align-items: flex-start;
+    padding: 10px 0;
+}
+.footer .language-btn{
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 3px;
+}
+.copyright-txt{
+    font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-width:600px){
+    .logo{
+        width: 100px;
+    }
+    nav button{
+        padding: 5px 10px;
+    }
+    nav .language-btn{
+        padding: 4px 8px;
+    }
+    .header-content{
+        position: unset;
+        transform: none;
+        padding-top: 150px;;
+    }
+    .header-content h1{
+        font-size: 30px;
+    }
+    .email-signup button{
+        font-size: 12px;
+        padding: 12px 15px;
+    }
+    .text-col, .img-col{
+        flex-basis: 100%;
+    }
+    .features h2{
+        font-size: 30px;
+    }
+    .features p{
+        font-size: 15px;
+    }
+    .row:nth-child(2), .row :nth-child(4){
+        flex-direction: column-reverse;
+    }
+    .features .row{
+        padding: 10px 0;
+    }
+    .faq h2{
+        font-size: 20px;
+    }
+    .accordion .content{
+        font-size: 14px;
+    }
+    .accordion li label{
+        padding: 10px;
+        font-size: 14px;
+    }
+    label::after{
+        font-size: 22px;
+    }
 }
